fixed issue with page width too wide, put nav items in grid, set up grid for other items as well

--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -3,7 +3,9 @@
   margin: 0;
   padding: 0;
 }
-
+html {
+  min-width: fit-content:
+}
 body {
   margin: 0;
   padding: 0;
@@ -11,13 +13,13 @@ body {
   height: 100%;
   min-width: 100%;
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: 100%;
   grid-template-rows: auto;
   grid-template-areas:
-    "nav nav nav nav nav"
-    "displayL displaycenter displayR"
-    "sidebar menu menu"
-    "whitespaceL employee1 employee2 employee3 whitespaceR"
+    "header"
+    "display"
+    "menu"
+    "employees"
     "footer"
 }
 /* Logo.css */
@@ -42,6 +44,31 @@ h2 {
   text-align: center;
 }
 
+ul {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 100%;
+  grid-template-areas:
+    "nav1 nav2 nav3 nav4 nav5"
+}
+.navRow {
+  grid-area: header;
+}
+.nav1 {
+  grid-area: nav1;
+}
+.nav2 {
+  grid-area: nav2;
+}
+.nav3 {
+  grid-area: nav3;
+}
+.nav4 {
+  grid-area: nav4;
+}
+.nav5 {
+  grid-area: nav5;
+}
 .home {
   width: 75%;
   margin-left: auto;
@@ -59,27 +86,16 @@ h2 {
   padding: 0;
   line-height: 10px;
 }
+
 /* navbar.css */
 
-
 .nav-li-left {
-  display: inline-block;
   text-decoration: none;
   padding-top: 26px;
   height: 2.625em;
   text-align: center;
   margin: 0;
   color: gray;
-  width:19.8%;
-}
-
-.nav-li-right {
-  display: inline-block;
-  text-decoration: none;
-  padding-top: 1.6em;
-  padding-left: 2.692em;
-  width: 7.50em;
-  height: 2.625em;
 }
 
 ul {
@@ -106,14 +122,6 @@ li {
   float: left;
   width: 100%;
   text-decoration: none;
-}
-
-.align-right {
-  margin-left: 0;
-  padding-left: 0;
-  margin: 0;
-  float: right;
-  max-width: 40%;
 }
 
 .minus-padding {
@@ -218,7 +226,7 @@ li {
   p#sidebar-title.sidebar{
     font-size: 1.5em;
     line-height: normal;
-    margin-top: 0em;
+    margin-top: 0;
     padding: 1em;
     width: 80%;
     text-align: center;
@@ -361,7 +369,7 @@ li {
 }
 
 .contact {
-  margin: 0em 3em 0em 3em;
+  margin: 0 3em 0 3em;
   line-height:1;
 }
 
@@ -369,14 +377,14 @@ li {
   display: inline-block;
   font-size: 1.75em;
   font-family: 'Quicksand', sans-serif;
-  padding: 0em 1.875em 2.62em 1.875em;
+  padding: 0 1.875em 2.62em 1.875em;
   margin-top: 0;
 }
 
 #sidebar-title {
   font-size: 2em;
   line-height: normal;
-  margin-top: 0em;
+  margin-top: 0;
   padding: 1em;
 
 }
@@ -544,7 +552,6 @@ footer {
   width: 100%;
   height: 200px;
   display: block;
-  position: fixed;
 }
 
 .footer-li {
